--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -11,6 +11,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Region?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="Address App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
@@ -24,18 +27,17 @@
       </stylesheets>
 
       <VBox>
-        <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-          <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Contact" onAction="#switchPerson">
-          </Menu>
-          <Menu mnemonicParsing="false" text="Deliverable" onAction="#switchDeliverable">
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-          </Menu>
-        </MenuBar>
+        <HBox fx:id="menuBar" VBox.vgrow="NEVER">
+          <HBox HBox.hgrow="NEVER">
+            <Button fx:id="deliverableButton" mnemonicParsing="false" onAction="#switchDeliverable" text="Deliverables">
+            </Button>
+            <Button fx:id="contactButton" mnemonicParsing="false" onAction="#switchPerson" text="Contacts">
+            </Button>
+          </HBox>
+          <Region HBox.hgrow="ALWAYS"/>
+          <Button fx:id="helpButton" mnemonicParsing="false" onAction="#handleHelp" text="Help">
+          </Button>
+        </HBox>
 
         <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
           <padding>
