Add Meeting tab to MainWindow

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -32,6 +32,8 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Deliverable" onAction="#switchDeliverable">
           </Menu>
+          <Menu mnemonicParsing="false" text="Meeting" onAction="#switchMeeting">
+          </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
           </Menu>
