--- a/src/main/resources/view/DeliverableListCard.fxml
+++ b/src/main/resources/view/DeliverableListCard.fxml
@@ -29,6 +29,7 @@
             <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
             <Label fx:id="deadline" styleClass="cell_small_label" text="\$deadline" />
             <Label fx:id="contacts" styleClass="cell_small_label" text="\$contacts" />
+            <Label fx:id="isCompleted" styleClass="cell_small_label" text="\$isCompleted" />
         </VBox>
     </GridPane>
 </HBox>
