--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -317,7 +317,7 @@
     -fx-font-size: 11;
 }
 
-#isCompleted {
+.tag_label {
     -fx-text-fill: white;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
