--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -308,7 +308,7 @@
     -fx-vgap: 3;
 }
 
-#tags .label {
+#role, #isCompleted, #milestone {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
