--- a/src/main/resources/view/DeliverableListCard.fxml
+++ b/src/main/resources/view/DeliverableListCard.fxml
@@ -27,7 +27,10 @@
                 </Label>
                 <Label fx:id="title" text="\$first" styleClass="cell_big_label" />
             </HBox>
-            <FlowPane fx:id="tags" />
+            <FlowPane fx:id="tags">
+                <Label fx:id="isCompleted" text="\$isCompleted" />
+                <Label fx:id="milestone" text="\$milestone" />
+            </FlowPane>
             <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
             <Label fx:id="deadline" styleClass="cell_small_label" text="\$deadline" />
             <Label fx:id="contacts" styleClass="cell_small_label" text="\$contacts" />
