Fix issues raised in pr comments.

--- a/src/main/resources/view/DeliverableDetailsPanel.fxml
+++ b/src/main/resources/view/DeliverableDetailsPanel.fxml
@@ -7,11 +7,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.FlowPane?>
+
 <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
           prefHeight="300" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <VBox>
         <children>
-            <Label fx:id="title" styleClass="details_title" VBox.vgrow="ALWAYS" />
+            <Label fx:id="title" styleClass="details_title" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS" />
             <HBox spacing="5">
                 <FlowPane fx:id="tags">
                     <Label fx:id="deadline" styleClass="cell_small_label" VBox.vgrow="ALWAYS" />
@@ -23,7 +24,7 @@
                 </padding>
             </HBox>
             <Label text="Description" styleClass="details_subheading" VBox.vgrow="ALWAYS" />
-            <Label fx:id="description" styleClass="cell_large_label" text="NIL" VBox.vgrow="ALWAYS">
+            <Label fx:id="description" styleClass="cell_large_label" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS">
                 <padding>
                     <Insets bottom="20" />
                 </padding>
