--- a/src/main/resources/view/ProjectCompletionStatusPanel.fxml
+++ b/src/main/resources/view/ProjectCompletionStatusPanel.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Label?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <Label fx:id="calendarHeading" styleClass="details_title" text="Calendar" />
-  <ListView fx:id="itemListView" VBox.vgrow="ALWAYS" />
+  <Label fx:id="projectCompletionHeading" styleClass="details_title" text="Project Completion" />
+  <Label fx:id="deliverablesCompleted" text="\$deliverablesCompleted"/>
 </VBox>
