--- a/src/main/resources/view/CalendarListPanel.fxml
+++ b/src/main/resources/view/CalendarListPanel.fxml
@@ -6,5 +6,5 @@
 <?import javafx.scene.control.Label?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <Label fx:id="calendarHeading" styleClass="details_title" text="Calendar" />
-  <ListView fx:id="itemListView" VBox.vgrow="ALWAYS" />
+  <ListView fx:id="timeEventListView" VBox.vgrow="ALWAYS" />
 </VBox>
