--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
+
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <GridPane HBox.hgrow="ALWAYS">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-    </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-      <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
-      </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="id" styleClass="cell_big_label">
-          <minWidth>
-            <!-- Ensures that the label text is never truncated -->
-            <Region fx:constant="USE_PREF_SIZE" />
-          </minWidth>
-        </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-      </HBox>
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <FlowPane fx:id="tags">
+  <GridPane HBox.hgrow="ALWAYS" minHeight="40">
+    <children>
+      <Label fx:id="id" styleClass="cell_small_label" GridPane.columnIndex="0" />
+      <Label fx:id="name" text="\$first" styleClass="cell_small_label" wrapText="true" GridPane.columnIndex="1" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" wrapText="true" GridPane.columnIndex="2" />
+      <FlowPane fx:id="tags" GridPane.columnIndex="3" >
         <Label fx:id="role" text="\$role" />
       </FlowPane>
-    </VBox>
+    </children>
+    <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" minWidth="10" prefWidth="35"/>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="10" prefWidth="40"/>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" minWidth="30" prefWidth="20"/>
+    </columnConstraints>
   </GridPane>
 </HBox>
