--- a/src/main/resources/view/DeliverableListCard.fxml
+++ b/src/main/resources/view/DeliverableListCard.fxml
@@ -10,28 +10,22 @@
 
 <?import javafx.scene.layout.FlowPane?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane HBox.hgrow="ALWAYS">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-        </columnConstraints>
-        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-            <padding>
-                <Insets top="5" right="5" bottom="5" left="15" />
-            </padding>
-            <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="id" styleClass="cell_big_label">
-                    <minWidth>
-                        <!-- Ensures that the label text is never truncated -->
-                        <Region fx:constant="USE_PREF_SIZE" />
-                    </minWidth>
-                </Label>
-                <Label fx:id="title" text="\$first" styleClass="cell_big_label" />
-            </HBox>
-            <Label fx:id="deadline" styleClass="cell_small_label" text="\$deadline" />
-            <FlowPane fx:id="tags">
+    <GridPane HBox.hgrow="ALWAYS" minHeight="40">
+        <children>
+            <Label fx:id="id" styleClass="cell_small_label" GridPane.columnIndex="0" />
+            <Label fx:id="title" text="\$first" styleClass="cell_small_label" wrapText="true" GridPane.columnIndex="1" />
+            <Label fx:id="deadline" text="\$deadline" styleClass="cell_small_label" wrapText="true"
+                   GridPane.columnIndex="2"/>
+            <FlowPane fx:id="tags" GridPane.columnIndex="3">
                 <Label fx:id="isCompleted" text="\$isCompleted" />
                 <Label fx:id="milestone" text="\$milestone" />
             </FlowPane>
-        </VBox>
+        </children>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" minWidth="10" prefWidth="55"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="40" prefWidth="40"/>
+        </columnConstraints>
     </GridPane>
 </HBox>
