--- a/src/main/resources/view/DeliverableListPanel.fxml
+++ b/src/main/resources/view/DeliverableListPanel.fxml
@@ -2,17 +2,17 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
+
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <GridPane minHeight="40">
     <children>
         <Label text="#" styleClass="cell_big_label" GridPane.columnIndex="0" />
         <Label text="Title" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="1" />
         <Label text="Deadline" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="2" />
-        <Label text="" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="3" />
+        <Label text="Status / Milestone" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="3" />
     </children>
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
