--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -79,7 +79,9 @@ figure > img {
 
 figcaption {
   font-size: $small-font-size;
-  text-color: #006400
+  color: #006400;
+  display: block;
+  text-align: center;
 }
 
 
