Update style and UG

--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -79,9 +79,10 @@ figure > img {
 
 figcaption {
   font-size: $small-font-size;
-  color: #006400;
+  color: #2e7d32;
   display: block;
   text-align: center;
+  font-style: italic;
 }
 
 
