--- a/src/main/resources/view/ProjectCompletionStatusPanel.fxml
+++ b/src/main/resources/view/ProjectCompletionStatusPanel.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 
+<?import javafx.scene.layout.StackPane?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <Label fx:id="projectCompletionHeading" styleClass="details_title" text="Project Completion" />
     <Label fx:id="OcpString" text="\$OcpString"/>
