--- a/src/main/resources/view/DeliverableListCard.fxml
+++ b/src/main/resources/view/DeliverableListCard.fxml
@@ -13,16 +13,15 @@
             <Label fx:id="title" text="\$first" styleClass="cell_small_label" wrapText="true" GridPane.columnIndex="1" />
             <Label fx:id="deadline" text="\$deadline" styleClass="cell_small_label" wrapText="true"
                    GridPane.columnIndex="2"/>
-            <FlowPane fx:id="tags" GridPane.columnIndex="3">
-                <Label fx:id="isCompleted" text="\$isCompleted" />
-                <Label fx:id="milestone" text="\$milestone" />
-            </FlowPane>
+            <Label fx:id="isCompleted" text="\$isCompleted" GridPane.halignment="CENTER" GridPane.columnIndex="3"/>
+            <Label fx:id="milestone" text="\$milestone" styleClass="cell_small_label" GridPane.halignment="CENTER" GridPane.columnIndex="4"/>
         </children>
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" minWidth="10" prefWidth="55"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="5" prefWidth="5"/>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="40" prefWidth="40"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="15" minWidth="10" prefWidth="15"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10" prefWidth="20"/>
         </columnConstraints>
     </GridPane>
 </HBox>
