Implement JavaFX for OCP

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -21,6 +21,8 @@
       <stylesheets>
         <URL value="@DarkTheme.css" />
         <URL value="@Extensions.css" />
+        <URL value="@Circleprogress.css"/>
+        <URL value="@Ringprogress.css"/>
       </stylesheets>
       <VBox>
         <HBox id="navBar" fx:id="navBar" VBox.vgrow="NEVER">
