--- a/src/main/resources/view/CalendarListDeliverableCard.fxml
+++ b/src/main/resources/view/CalendarListDeliverableCard.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.layout.FlowPane?>
@@ -19,13 +18,8 @@
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
             <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="id" styleClass="cell_big_label">
-                    <minWidth>
-                        <!-- Ensures that the label text is never truncated -->
-                        <Region fx:constant="USE_PREF_SIZE" />
-                    </minWidth>
+                <Label fx:id="title" text="\$first" styleClass="cell_big_label" wrapText="true">
                 </Label>
-                <Label fx:id="title" text="\$first" styleClass="cell_big_label" />
             </HBox>
             <FlowPane fx:id="tags">
                 <Label fx:id="isCompleted" text="\$isCompleted" />
