--- a/src/main/resources/view/CalendarListMeetingCard.fxml
+++ b/src/main/resources/view/CalendarListMeetingCard.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
@@ -18,16 +17,10 @@
         <Insets top="5" right="5" bottom="5" left="15" />
       </padding>
       <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="id" styleClass="cell_big_label">
-          <minWidth>
-            <!-- Ensures that the label text is never truncated -->
-            <Region fx:constant="USE_PREF_SIZE" />
-          </minWidth>
+        <Label fx:id="title" text="\$title" styleClass="cell_big_label" wrapText="true">
         </Label>
-        <Label fx:id="title" text="\$title" styleClass="cell_big_label" />
       </HBox>
-      <Label fx:id="from" styleClass="cell_small_label" text="\$from" />
-      <Label fx:id="to" styleClass="cell_small_label" text="\$to" />
+      <Label fx:id="duration" styleClass="cell_small_label" text="\$duration" wrapText="true"/>
     </VBox>
   </GridPane>
 </HBox>
