--- a/src/main/resources/view/CalendarListMeetingCard.fxml
+++ b/src/main/resources/view/CalendarListMeetingCard.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.FlowPane?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
@@ -20,7 +21,10 @@
         <Label fx:id="title" text="\$title" styleClass="cell_big_label" wrapText="true">
         </Label>
       </HBox>
-      <Label fx:id="duration" styleClass="cell_small_label" text="\$duration" wrapText="true"/>
+      <FlowPane>
+          <Label text = "Time: " styleClass="label-bright"/>
+          <Label fx:id="duration" styleClass="cell_small_label" text="\$duration" wrapText="true"/>
+      </FlowPane>
     </VBox>
   </GridPane>
 </HBox>
