--- a/src/main/resources/view/DeliverableListCard.fxml
+++ b/src/main/resources/view/DeliverableListCard.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.layout.FlowPane?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS" minHeight="40">
         <children>
@@ -12,14 +13,15 @@
             <Label fx:id="title" text="\$first" styleClass="cell_small_label" wrapText="true" GridPane.columnIndex="1" />
             <Label fx:id="deadline" text="\$deadline" styleClass="cell_small_label" wrapText="true"
                    GridPane.columnIndex="2"/>
-            <Label fx:id="isCompleted" text="\$isCompleted" GridPane.halignment="CENTER" GridPane.columnIndex="3"/>
-            <Label fx:id="milestone" text="\$milestone" styleClass="cell_small_label" wrapText="true" GridPane.halignment="CENTER" GridPane.columnIndex="4"/>
+            <FlowPane fx:id = "tags" GridPane.columnIndex="3">
+                <Label fx:id="isCompleted" text="\$isCompleted" styleClass="cell_small_label"/>
+                <Label fx:id="milestone" text="\$milestone" styleClass="cell_small_label"/>
+            </FlowPane>
         </children>
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="5" prefWidth="5"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" minWidth="10" prefWidth="55.0"/>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="15" minWidth="10" prefWidth="15"/>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10" prefWidth="20"/>
         </columnConstraints>
     </GridPane>
