--- a/src/main/resources/view/DeliverableListPanel.fxml
+++ b/src/main/resources/view/DeliverableListPanel.fxml
@@ -7,20 +7,18 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane minHeight="40" >
+    <GridPane minHeight="50" VBox.vgrow="ALWAYS">
         <children>
             <Label text="#" styleClass="cell_big_label" GridPane.columnIndex="0" />
-            <Label text="Title" styleClass="cell_big_label" GridPane.columnIndex="1" />
-            <Label text="Deadline" styleClass="cell_big_label" GridPane.columnIndex="2" />
-            <Label text="Status" styleClass="cell_big_label" GridPane.columnIndex="3" />
-            <Label text="Milestone" styleClass="cell_big_label" GridPane.columnIndex="4" />
+            <Label text="Title" styleClass="cell_big_label"  wrapText = "true" GridPane.columnIndex="1"/>
+            <Label text="Deadline" styleClass="cell_big_label"  wrapText = "true" GridPane.columnIndex="2" />
+            <Label text="Status / Milestone" styleClass="cell_big_label" wrapText = "true" GridPane.columnIndex="3" />
         </children>
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="5" prefWidth="5"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" minWidth="10" prefWidth="55.0"/>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="15" minWidth="10" prefWidth="15"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20" minWidth="10" prefWidth="20"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" minWidth="20.0" prefWidth="20.0"/>
         </columnConstraints>
     </GridPane>
     <ListView fx:id="deliverableListView" VBox.vgrow="ALWAYS" />
