--- a/src/main/resources/view/CalendarListDeliverableCard.fxml
+++ b/src/main/resources/view/CalendarListDeliverableCard.fxml
@@ -18,7 +18,7 @@
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
             <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="title" text="\$first" styleClass="cell_big_label" wrapText="true">
+                <Label fx:id="title" text="\$first" styleClass="cell_big_label" >
                 </Label>
             </HBox>
             <FlowPane>
