--- a/src/main/resources/view/MeetingListCard.fxml
+++ b/src/main/resources/view/MeetingListCard.fxml
@@ -9,9 +9,9 @@
 <GridPane HBox.hgrow="ALWAYS" minHeight="40">
     <children>
         <Label fx:id="id" styleClass="cell_small_label" GridPane.columnIndex="0" />
-        <Label fx:id="title" text="\$title" styleClass="cell_small_label" wrapText="true" GridPane.columnIndex="1" />
-        <Label fx:id="from" styleClass="cell_small_label" text="\$from" wrapText="true" GridPane.columnIndex="2" />
-        <Label fx:id="to" styleClass="cell_small_label" text="\$to" wrapText="true" GridPane.columnIndex="3" />
+        <Label fx:id="title" text="\$title" styleClass="cell_small_label" GridPane.columnIndex="1" />
+        <Label fx:id="from" styleClass="cell_small_label" text="\$from" GridPane.columnIndex="2" />
+        <Label fx:id="to" styleClass="cell_small_label" text="\$to" GridPane.columnIndex="3" />
     </children>
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
