--- a/src/main/resources/view/MeetingListPanel.fxml
+++ b/src/main/resources/view/MeetingListPanel.fxml
@@ -11,14 +11,12 @@
         <children>
             <Label text="#" styleClass="cell_big_label" GridPane.columnIndex="0" />
             <Label text="Title" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="1" />
-            <Label text="From" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="2" />
-            <Label text="To" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="3" />
+            <Label text="Date &amp; Time" styleClass="cell_big_label" wrapText="true" GridPane.columnIndex="2" />
         </children>
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" minWidth="10" prefWidth="50"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" minWidth="10" prefWidth="30"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="15.0" minWidth="10" prefWidth="15"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" minWidth="10" prefWidth="55"/>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="10" prefWidth="40"/>
         </columnConstraints>
     </GridPane>
     <ListView fx:id="meetingListView" VBox.vgrow="ALWAYS" />
