--- a/src/main/resources/view/MeetingDetailsPanel.fxml
+++ b/src/main/resources/view/MeetingDetailsPanel.fxml
@@ -11,27 +11,31 @@
           prefHeight="300" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <VBox>
         <children>
-            <Label fx:id="title" styleClass="details_title" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS" />
+            <Label fx:id="title" styleClass="details_title" prefWidth="400" wrapText="true" VBox.vgrow="ALWAYS" />
             <HBox spacing="5">
-                <Label fx:id="datetime" styleClass="cell_small_label" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS" />
+                <Label fx:id="datetime" styleClass="cell_small_label" prefWidth="400" wrapText="true" VBox.vgrow="ALWAYS" />
                 <padding>
                     <Insets bottom="40" />
                 </padding>
             </HBox>
-            <Label text="Location" styleClass="details_subheading" VBox.vgrow="ALWAYS" />
-            <Label fx:id="venue" styleClass="cell_large_label" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS">
-                <padding>
-                    <Insets bottom="20" />
-                </padding>
-            </Label>
             <Label text="Description" styleClass="details_subheading" VBox.vgrow="ALWAYS" />
-            <Label fx:id="description" styleClass="cell_large_label" prefWidth="300" wrapText="true" VBox.vgrow="ALWAYS">
+            <Label fx:id="description" styleClass="cell_large_label" prefWidth="400" wrapText="true" VBox.vgrow="ALWAYS">
                 <padding>
                     <Insets bottom="20" />
                 </padding>
             </Label>
             <Label text="Contacts" styleClass="details_subheading" VBox.vgrow="ALWAYS" />
-            <VBox fx:id="contactList" styleClass="cell_large_label" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
+            <VBox fx:id="contactList" styleClass="cell_large_label" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                <padding>
+                    <Insets bottom="20" />
+                </padding>
+            </VBox>
+            <Label text="Location" styleClass="details_subheading" VBox.vgrow="ALWAYS" />
+            <Label fx:id="venue" styleClass="cell_large_label" prefWidth="400" wrapText="true" VBox.vgrow="ALWAYS">
+                <padding>
+                    <Insets bottom="20" />
+                </padding>
+            </Label>
         </children>
     </VBox>
 </ListView>
