--- a/src/main/resources/view/DeliverableListPanel.fxml
+++ b/src/main/resources/view/DeliverableListPanel.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane minHeight="40" >
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
+    <GridPane alignment="BASELINE_CENTER" minHeight="20">
         <children>
             <Label text="#" styleClass="cell_big_label" GridPane.columnIndex="0" />
             <Label text="Title" styleClass="cell_big_label" GridPane.columnIndex="1" />
             <Label text="Deadline" styleClass="cell_big_label" GridPane.columnIndex="2" />
-            <Label text="Milestone" styleClass="cell_big_label" GridPane.columnIndex="3" />
-            <Label text="Status" styleClass="cell_big_label" GridPane.columnIndex="4" />
+            <Label text="Milestone" GridPane.halignment="CENTER" styleClass="cell_big_label" GridPane.columnIndex="3" />
+            <Label text="Status" GridPane.halignment="CENTER" styleClass="cell_big_label" GridPane.columnIndex="4" />
         </children>
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="5" prefWidth="5"/>
