--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -7,20 +7,18 @@
 <?import javafx.scene.layout.HBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <GridPane HBox.hgrow="ALWAYS" minHeight="40">
+  <GridPane alignment="CENTER" HBox.hgrow="ALWAYS" minHeight="40">
     <children>
       <Label fx:id="id" styleClass="cell_small_label" GridPane.columnIndex="0" />
       <Label fx:id="name" text="\$first" styleClass="cell_small_label" GridPane.columnIndex="1" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" GridPane.columnIndex="2" />
-      <FlowPane fx:id="tags" GridPane.columnIndex="3" >
-        <Label fx:id="role" text="\$role" />
-      </FlowPane>
+      <Label fx:id="role" text="\$role" GridPane.halignment="CENTER" GridPane.columnIndex="2"/>
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" GridPane.columnIndex="3" />
     </children>
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" minWidth="10" prefWidth="5"/>
       <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" minWidth="10" prefWidth="35"/>
-      <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="10" prefWidth="40"/>
       <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" minWidth="30" prefWidth="20"/>
+      <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" minWidth="10" prefWidth="40"/>
     </columnConstraints>
   </GridPane>
 </HBox>
