--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -108,7 +108,6 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
-  color: #2e7d32;
 }
 
 
@@ -235,7 +234,7 @@ pre {
  */
 
 .orange {
-  color: #2e7d32;
+  color: #f66a0a;
 }
 
 .grey {
